--- a/neverevil.css
+++ b/neverevil.css
@@ -1,118 +1,160 @@
-body {
-	background-color: #F0F6FF;
-	background-position: center;
-	background-attachment: fixed;
+html {
+	background-color: #333;
 	color: white;
 }
 
-header {
+.main {
+	margin-right: 10%;
+	margin-left: 10%;
 	text-align: center;
+}
+
+.main, #blog {
+	background-color: rgba(255, 255, 255, 0.75);
 	color: black;
-	font-size: 18px
+	margin-bottom: 10%;
+
 }
 
-h3 {
+#blog {
+	margin-left: 19%;
+	padding-right: 1%;
+	padding-left: 1%;
+}
+
+#title {
 	text-align: center;
 }
 
-article {
-	padding: 16px;
-	padding-left: 64px;
-	padding-right: 64px;
+/* Left Navigation Bar */
+
+#quick_nav {
+	float: left;
+	position: fixed;
+	width: 18%;
+	background-color: white;
+	color: black;
 }
 
-a {
-	text-decoration: none;
+#quick_nav a {
+	color: black;
 }
 
-.middle {
-	background: rgba(79, 79, 79, .66);
-	margin-top: 32px;
-	margin-left: 224px;
-	margin-right: 128px;
-}
-
-.current {
-	background-color: #005E91;
-}
-
-.center {
+#quick_nav h2 {
 	text-align: center;
+}
+
+/* Navigation Bar */
+
+#current {
+	background: rgba(0, 0, 0, 0.5);
 }
 
 #nav_bar {
-	list-style-type: none;	
-	background-color: #0099FF;
-	border-color: #EDEDED;
-	overflow: hidden;
-	padding-left: 128px;
-	padding-right: 128px;
-	margin: -8px;
-}
-
-#nav_bar li {
-	display: inline-block;
-	float: left;
-	border-right: 1px solid #EDEDED;
-}
-
-#nav_bar li a {
-	display: block;
-	color: #EDEDED;
-	text-align: center;
-	padding: 14px 16px;
-}
-
-#nav_bar li a:hover {
-	background-color: #1AFF00;
+	background: rgba(255, 255, 255, 1);
+	margin-left: -10px;
+	position: fixed;
+	bottom: 0;
 	color: black;
 }
 
-#nav_bar li a:active {
-	background-color: #0D8000;
+#nav_bar, #nav_bar table {
+	width: 100%;
 }
 
-#nav_bar li:first-child {
-	border-left: 1px solid #EDEDED;
+#nav_bar img {
+	max-height: 50%;
 }
 
-#nav_bar li:last-child {
-	float: right;
-	border-left: 1px solid #EDEDED;
-}
-
-#left_nav {
-	list-style-type: none;
-	float: left;
-	position: fixed;
-	margin-top: 32px;
-	margin-left: auto;
-	padding: 0px;
-	width: auto;
-	height: auto;
-	background-color: #949494;
-}
-
-#left_nav li {
-	padding: 16px;
-	text-shadow: 1px 3px 5px black;
-}
-
-#left_nav li a {
-	color: #EDEDED;
-	display: block;
-}
-
-#left_nav li:hover {
-	background-color: #005E91;
-}
-
-#left_nav li a:visited {
-	color: #EDEDED;
-}
-
-#left_nav li:first-child {
-	background-color: #737373;
-	font-size: 28px;
+#nav_bar td {
 	text-align: center;
 }
+
+#nav_bar img:hover {
+	background: rgba(0, 0, 0, 0.25);
+}
+
+/* Form Submission */
+
+.field {
+  margin: 1em 0;
+}
+
+.field_label {
+  display: block;
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  color: #999999;
+}
+
+.field_input, .field_textarea {
+  width: 80%;
+  padding: 0.5em 0.5em;
+  font-size: 1.2em;
+  border-radius: 3px;
+  border: 1px solid #D9D9D9;
+}
+
+.field_textarea {
+  height: 200px;
+}
+
+.success {
+  padding: 1em;
+  margin-bottom: 0.75rem;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  color: #468847;
+  background-color: #dff0d8;
+  border: 1px solid #d6e9c6;
+  border-radius: 4px;
+}
+
+.error {
+  padding: 1em;
+  margin-bottom: 0.75rem;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  color: #b94a48;
+  background-color: #f2dede;
+  border: 1px solid rgba(185, 74, 72, 0.3);
+  border-radius: 4px;
+}
+
+#email_header {
+	color: black;
+}
+
+#page-wrapper {
+  width: 640px;
+  background: #FFFFFF;
+  padding: 1em;
+  margin: 1em auto;
+  border-top: 5px solid #69c773;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+}
+
+#submit_button {
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.5rem 0.8em;
+  background: #69c773;
+  border-bottom: 1px solid #498b50;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
+  margin: 0;
+  width: 100%;
+  text-align: center;
+}
+
+#submit_button:hover, #submit_button:focus {
+  opacity: 0.75;
+  cursor: pointer;
+}
+
+#submit_button:active {
+  opacity: 1;
+  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1) inset;
+}
+
