--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11280,11 +11280,11 @@ textarea.form-control-lg {
 }
 
 .companies {
-  padding: 0 0 5rem 0;
+  padding: 0 0 2rem 0;
 }
 .companies__logo-box {
   max-width: 100%;
-  height: 3rem;
+  height: 5rem;
   margin-bottom: 3rem;
   padding: 0.5rem;
   text-align: center;
@@ -11292,6 +11292,7 @@ textarea.form-control-lg {
 }
 .companies__logo-box img {
   height: 100%;
+  max-width: 100%;
 }
 .companies__logo-box img:hover {
   filter: grayscale(120);
@@ -11299,7 +11300,7 @@ textarea.form-control-lg {
 
 .services {
   position: relative;
-  padding: 1rem 0;
+  padding: 4rem 0;
 }
 .services__content {
   padding: 1rem;
@@ -11375,6 +11376,10 @@ textarea.form-control-lg {
 .testimonials__name p {
   padding-bottom: 2rem;
   text-transform: capitalize;
+}
+
+.faq {
+  padding: 4rem 0;
 }
 
 .portfolio {
