--- a/scss/sections/_companies.scss
+++ b/scss/sections/_companies.scss
@@ -1,9 +1,9 @@
 .companies {
-    padding: 0 0 5rem 0;
+    padding: 0 0 2rem 0;
 
     &__logo-box {
         max-width: 100%;
-        height: 3rem;
+        height: 5rem;
         margin-bottom: 3rem;
         padding: 0.5rem;
         text-align: center;
@@ -11,6 +11,7 @@
 
         img {
             height: 100%;
+            max-width: 100%;
 
             &:hover {
                 filter: grayscale(120)
